--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -69,11 +69,11 @@
             </div>
         </div>
         <div class="divider">
-            <div>
+            <!-- <div>
                 <p>+</p>
                 <p>50</p>
                 <p>Clients <br><span>satisfaits</span></p>
-            </div>
+            </div> -->
             <div>
                 <p>+</p>
                 <p>30</p>
@@ -81,8 +81,8 @@
             </div>
             <div>
                 <p>+</p>
-                <p>99%</p>
-                <p>engagements <br><span>client</span></p>
+                <p>100%</p>
+                <p>satisfaction <br><span>client</span></p>
             </div>
         </div>
     </header>
@@ -150,7 +150,7 @@
 
                 <div class="texte">
                     <p>Mila réinvente l'expérience de séjour dans les hôtels et casinos</p>
-                    <p> Grâce à son intelligence sémantique avancée, notre hôtesse d'accueil virtuelle et multilingue guide les clients, répond à leurs questions, recommande les meilleures attractions, met en avant les événements spéciaux, et bien plus encore !</p>
+                    <p>Grâce à son intelligence sémantique avancée, notre hôtesse d'accueil virtuelle et multilingue guide les clients, répond à leurs questions, recommande les meilleures attractions, met en avant les événements spéciaux, et bien plus encore !</p>
                     <p>Avec Mila, innovez dans l'accueil des visiteurs et offrez une expérience captivante, unique et mémorable</p>
                 </div>
             </div>
@@ -202,23 +202,25 @@
                     <!-- <p>adaptées</p> -->
                 </div>
                 <div class="desc">
-                    <p>Amélioration de l’expérience d’achat et renforcement de la relation client</p>
+                    <p>Grâce à son intelligence sémantique de pointe, notre hôtesse d'accueil virtuelle, parlant plus de 30 langues, propose les fonctionnalités suivantes</p>
                 </div>
                 <div class="details">
                     <div class="gauche">
                         <ul>
+                            <li>Orientation / Guidage</li>
+                            <li>Mise en avant des promotions en cours</li>
                             <li>Accueil des clients de manière ludique et attractive</li>
                             <li>Assistance pour trouver le mode de transport approprié</li>
                             <li>Présentation des opportunités d’emploi disponibles</li>
-                        </ul>
-                    </div>
-                    <div class="droite">
-                        <ul>
-                            <li>Orientation / Guidage</li>
-                            <li>Mise en avant des promotions en cours</li>
                             <li>Transfert de la conversation vers un agent d’accueil partagé à distance</li>
                         </ul>
                     </div>
+                    <!-- <div class="droite">
+                        <ul>
+                            
+                            
+                        </ul>
+                    </div> -->
                 </div>
             </div>
             <div class="right">
@@ -237,6 +239,9 @@
             <div class="droite">
                 <div class="title">
                     <p>Personnalisations</p>
+                </div>
+                <div class="desc">
+                    <p>Nous vous proposons une assistante virtuelle personnalisée, répondant parfaitement à vos besoins spécifiques</p>
                 </div>
                 <div class="details">
                     <ul>
