--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -63,7 +63,7 @@
             </div>
             <div class="right">
                 <H1>assistante virtuelle<br>mila</H1>
-                <p>Découvrez Mila, notre assistante virtuelle 3D révolutionnaire, animée par la technologie
+                <p>Découvrez <span>Mila</span>, notre assistante virtuelle 3D <span>révolutionnaire</span>, animée par la technologie
                     holographique</p>
                 <a href="#innovation">Découvrir</a>
             </div>
