update target + responsive mobile

--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -120,78 +120,69 @@
                 </div>
             </div>
         </div>
-        <div class="flexing">
-            <div class="section section--yellow">
+
+        <div class="cards">
+            <article>
                 <div class="titre">
-                    <div class="title">
-                        <p>Transport</p>
-                    </div>
+                    <p>Transport</p>
+                    <i class="fas fa-arrow-alt-circle-down"></i>
                 </div>
-                <video autoplay muted loop id="myVideo">
-                    <source src="./assets/vid/illust.webm" type="video/webm">
-                </video>
-                <div class="texte">
-                    <p>La difficulté de se repérer dans une gare ou un aéroport peut augmenter considérablement le
-                        stress des passagers, surtout pour les étrangers.</p>
-                    <p> Mila, parlant plus de 30 langues, constitue dans ce cadre un moyen pertinent pour améliorer
-                        l’accueil des passagers et optimiser leur expérience de voyage.</p>
-                    <p>Ils auront ainsi, en temps réel, toutes les informations liées à leur train, vol, quai,
-                        retard éventuel … ils pourront également optimiser leurs visites des restaurants et
-                        boutiques grâce aux offres promotionnelles proposées de manière customisée et ludique. Mila
-                        sera votre aout incontournable pour renforcer la relation avec vos clients</p>
+                <div class="img_illu"></div>
+                <div class="text">
+                    <p>Mila améliore l’accueil des passagers et optimise leur expérience de voyage</p>
+                    <p>Elle fournit en temps réel, toutes les informations liées à leur trajet, correspondance, retard éventuel, offres promotionnelles des boutiques et restaurants partenaires</p>
+                    <p>Mila sera votre aout incontournable pour renforcer la relation avec vos clients !</p>
                 </div>
-
-            </div>
-            <div class="section section--pink">
-                
-                <video autoplay muted loop id="myVideo">
-                    <source src="./assets/vid/illust.webm" type="video/webm">
-                </video>
-
-                <div class="texte">
+            </article>
+            <article>
+                <div class="titre">
+                    <p>Hôtels & Casinos</p>
+                    <i class="fas fa-arrow-alt-circle-down"></i>
+                </div>
+                <div class="img_illu"></div>
+                <div class="text">
                     <p>Mila réinvente l'expérience de séjour dans les hôtels et casinos</p>
-                    <p>Grâce à son intelligence sémantique avancée, notre hôtesse d'accueil virtuelle et multilingue guide les clients, répond à leurs questions, recommande les meilleures attractions, met en avant les événements spéciaux, et bien plus encore !</p>
-                    <p>Avec Mila, innovez dans l'accueil des visiteurs et offrez une expérience captivante, unique et mémorable</p>
+                    <p>Elle guide les clients, répond à leurs questions, recommande les meilleures attractions, met en avant les événements spéciaux, et bien plus encore !</p>
+                    <p>Avec Mila, innovez dans l'accueil des visiteurs et offrez une expérience captivante, unique et mémorable !</p>
                 </div>
-            </div>
-            <div class="section section--green">
-                <video autoplay muted loop id="myVideo">
-                    <source src="./assets/vid/illust.webm" type="video/webm">
-                </video>
+            </article>
+            <article>
                 <div class="titre">
-                    <div class="title">
-                        <p>Galeries marchandes</p>
-                    </div>
-                    <div class="texte">
-                        <p>Mila transforme l'expérience de visite dans vos centres commerciaux</p>
-                        <p>Grâce à son intelligence sémantique de pointe, notre hôtesse d'accueil virtuelle, parlant plus de 30 langues, offre une assistance continue pour orienter les clients, répondre à leurs questions, leurs proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
-                        <p>Mila sera votre alliée pour enrichir la communication avec vos clients et les fidéliser</p>
-                    </div>
+                    <p>Musées</p>
+                    <i class="fas fa-arrow-alt-circle-down"></i>
                 </div>
-            </div>
-            <div class="section section--orange">
-                <video autoplay muted loop id="myVideo">
-                    <source src="./assets/vid/illust.webm" type="video/webm">
-                </video>
+                <div class="img_illu"></div>
+                <div class="text">
+                    <p>Mila enrichit l'expérience de visite dans les musées</p>
+                    <p>Elle guide les visiteurs, répond à leurs questions, présente les œuvres d'art, met en avant les expositions et événements, et bien plus encore !</p>
+                    <p>Avec Mila, innovez dans l'accueil des visiteurs et proposez une expérience captivante, unique et mémorable !</p>
+                </div>
+            </article>
+            <article>
                 <div class="titre">
-                    <div class="title">
-                        <p>Musées</p>
-                    </div>
+                    <p>Galeries Marchandes</p>
+                    <i class="fas fa-arrow-alt-circle-down"></i>
                 </div>
-            </div>
-            <div class="section section--blue">
-                <video autoplay muted loop id="myVideo">
-                    <source src="./assets/vid/illust.webm" type="video/webm">
-                </video>
+                <div class="img_illu"></div>
+                <div class="text">
+                    <p>Mila transforme l'expérience de visite dans vos centres commerciaux</p>
+                    <p>Elle offre une assistance continue pour orienter les clients, répondre à leurs questions, leurs proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
+                    <p>Mila sera votre partenaire idéale pour améliorer la communication avec vos clients et renforcer leur fidélité</p>
+                </div>
+            </article>
+            <article>
                 <div class="titre">
-                    <div class="title">
-                        <p>Points de vente</p>
-                    </div>
+                    <p>Points de vente</p>
+                    <i class="fas fa-arrow-alt-circle-down"></i>
                 </div>
-            </div>
+                <div class="img_illu"></div>
+                <div class="text">
+                    <p>Mila révolutionne l'expérience d’achat dans vos points de vente</p>
+                    <p>Elle offre une assistance continue pour orienter les clients, répondre à leurs questions, leurs proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
+                    <p>Mila sera votre alliée pour enrichir la communication avec vos clients et les fidéliser</p>
+                </div>
+            </article>
         </div>
-
-   
     </section>
 
     <section class="fonctions">
