--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -295,7 +295,8 @@
     <section class="demo">
         <div class="content">
             <div class="left">
-                <img src="./assets/img/mila_demo.png" alt="">
+                <div><img src="./assets/img/mila_demo.png" alt="">
+                </div>
             </div>
             <div class="right">
                 <div class="titre">
