rework innov + responsive

--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -30,7 +30,8 @@
                 <span></span>
             </div>
             <div class="logo">
-                <a href="#home" class="js-scrollTo"><img src="./assets/img/logo_luxantinnovation.svg" alt="Logo Mila"></a>
+                <a href="#home" class="js-scrollTo"><img src="./assets/img/logo_luxantinnovation.svg"
+                        alt="Logo Mila"></a>
             </div>
             <div class="menu">
                 <ul>
@@ -56,14 +57,15 @@
             <div class="mid">
                 <div class="hero">
                     <svg width="457" height="457" viewBox="0 0 457 457" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <circle cx="228.5" cy="228.5" r="228.5" fill="#D6BB73"/>
-                        </svg>
+                        <circle cx="228.5" cy="228.5" r="228.5" fill="#D6BB73" />
+                    </svg>
                     <img src="./assets/img/mila_header2.png" alt="">
                 </div>
             </div>
             <div class="right">
                 <H1>assistante virtuelle<br>mila</H1>
-                <p>Découvrez <span>Mila</span>, notre assistante virtuelle 3D <span>révolutionnaire</span>, animée par la technologie
+                <p>Découvrez <span>Mila</span>, notre assistante virtuelle 3D <span>révolutionnaire</span>, animée par
+                    la technologie
                     holographique</p>
                 <a href="#innovation">Découvrir</a>
             </div>
@@ -88,20 +90,47 @@
     </header>
 
     <section class="innovation" id="innovation">
-        <div class="main">
-            <p>L'innovation</p>
-            <p>au service</p>
-            <p>des usagers</p>
-        </div>
-        <div class="bottom">
-            <div>
-                <p>lorem</p>
+        <div class="container">
+            <div class="content">
+                <div class="textleft">
+                    <p>Technologie innovante</p>
+                </div>
+                <div class="middle">
+                    <p>l'innovation</p>
+                    <p>au service</p>
+                    <p>des usagers</p>
+                </div>
+                <div class="textright">
+                    <p>Technologie innovante</p>
+                </div>
             </div>
-            <div><a href="#target"><img src="./assets/img/arrow_down.svg" alt=""></a></div>
-            <div>
-                <p>lorem</p>
+            <div class="bottom">
+                <div>
+                    <p>Technologie</p>
+                </div>
+                <div>
+                    <a href="#target">
+                        <svg width="30" height="75" viewBox="0 0 30 75" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_24_108)">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M29.996 60.628L15.866 74.102V75.007H14.633V74.543L14.597 74.505L14.11 74.968L0.0169678 59.977L1.02497 59.019L14.557 73.413L14.633 73.341V0.0159912H15.866V72.165L29.038 59.604L29.996 60.628Z" fill="#A3A3A3"/>
+                            </g>
+                            <defs>
+                            <clipPath id="clip0_24_108">
+                            <rect width="30" height="75" fill="white"/>
+                            </clipPath>
+                            </defs>
+                            </svg>
+                    </a>
+
+                        
+                </div>
+                <div>
+                    <p>holographique</p>
+                </div>
             </div>
         </div>
+
+
     </section>
     <section class="target" id="target">
         <div class="topline">
@@ -130,7 +159,8 @@
                 <div class="img_illu"></div>
                 <div class="text">
                     <p>Mila améliore l’accueil des passagers et optimise leur expérience de voyage</p>
-                    <p>Elle fournit en temps réel, toutes les informations liées à leur trajet, correspondance, retard éventuel, offres promotionnelles des boutiques et restaurants partenaires</p>
+                    <p>Elle fournit en temps réel, toutes les informations liées à leur trajet, correspondance, retard
+                        éventuel, offres promotionnelles des boutiques et restaurants partenaires</p>
                     <p>Mila sera votre aout incontournable pour renforcer la relation avec vos clients !</p>
                 </div>
             </article>
@@ -142,8 +172,10 @@
                 <div class="img_illu"></div>
                 <div class="text">
                     <p>Mila réinvente l'expérience de séjour dans les hôtels et casinos</p>
-                    <p>Elle guide les clients, répond à leurs questions, recommande les meilleures attractions, met en avant les événements spéciaux, et bien plus encore !</p>
-                    <p>Avec Mila, innovez dans l'accueil des visiteurs et offrez une expérience captivante, unique et mémorable !</p>
+                    <p>Elle guide les clients, répond à leurs questions, recommande les meilleures attractions, met en
+                        avant les événements spéciaux, et bien plus encore !</p>
+                    <p>Avec Mila, innovez dans l'accueil des visiteurs et offrez une expérience captivante, unique et
+                        mémorable !</p>
                 </div>
             </article>
             <article>
@@ -154,8 +186,10 @@
                 <div class="img_illu"></div>
                 <div class="text">
                     <p>Mila enrichit l'expérience de visite dans les musées</p>
-                    <p>Elle guide les visiteurs, répond à leurs questions, présente les œuvres d'art, met en avant les expositions et événements, et bien plus encore !</p>
-                    <p>Avec Mila, innovez dans l'accueil des visiteurs et proposez une expérience captivante, unique et mémorable !</p>
+                    <p>Elle guide les visiteurs, répond à leurs questions, présente les œuvres d'art, met en avant les
+                        expositions et événements, et bien plus encore !</p>
+                    <p>Avec Mila, innovez dans l'accueil des visiteurs et proposez une expérience captivante, unique et
+                        mémorable !</p>
                 </div>
             </article>
             <article>
@@ -166,8 +200,10 @@
                 <div class="img_illu"></div>
                 <div class="text">
                     <p>Mila transforme l'expérience de visite dans vos centres commerciaux</p>
-                    <p>Elle offre une assistance continue pour orienter les clients, répondre à leurs questions, leurs proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
-                    <p>Mila sera votre partenaire idéale pour améliorer la communication avec vos clients et renforcer leur fidélité</p>
+                    <p>Elle offre une assistance continue pour orienter les clients, répondre à leurs questions, leurs
+                        proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
+                    <p>Mila sera votre partenaire idéale pour améliorer la communication avec vos clients et renforcer
+                        leur fidélité</p>
                 </div>
             </article>
             <article>
@@ -178,7 +214,8 @@
                 <div class="img_illu"></div>
                 <div class="text">
                     <p>Mila révolutionne l'expérience d’achat dans vos points de vente</p>
-                    <p>Elle offre une assistance continue pour orienter les clients, répondre à leurs questions, leurs proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
+                    <p>Elle offre une assistance continue pour orienter les clients, répondre à leurs questions, leurs
+                        proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
                     <p>Mila sera votre alliée pour enrichir la communication avec vos clients et les fidéliser</p>
                 </div>
             </article>
@@ -193,7 +230,8 @@
                     <!-- <p>adaptées</p> -->
                 </div>
                 <div class="desc">
-                    <p>Grâce à son intelligence sémantique de pointe, notre hôtesse d'accueil virtuelle, parlant plus de 30 langues, propose les fonctionnalités suivantes</p>
+                    <p>Grâce à son intelligence sémantique de pointe, notre hôtesse d'accueil virtuelle, parlant plus de
+                        30 langues, propose les fonctionnalités suivantes</p>
                 </div>
                 <div class="details">
                     <div class="gauche">
@@ -232,7 +270,8 @@
                     <p>Personnalisations</p>
                 </div>
                 <div class="desc">
-                    <p>Nous vous proposons une assistante virtuelle personnalisée, répondant parfaitement à vos besoins spécifiques</p>
+                    <p>Nous vous proposons une assistante virtuelle personnalisée, répondant parfaitement à vos besoins
+                        spécifiques</p>
                 </div>
                 <div class="details">
                     <ul>
@@ -251,43 +290,47 @@
     </section>
 
     <section class="video">
-        <div class="txt">
-            <svg width="30" height="75" viewBox="0 0 30 75" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g clip-path="url(#clip0_24_108)">
-                    <path fill-rule="evenodd" clip-rule="evenodd"
-                        d="M29.996 60.628L15.866 74.102V75.007H14.633V74.543L14.597 74.505L14.11 74.968L0.0169678 59.977L1.02497 59.019L14.557 73.413L14.633 73.341V0.0159912H15.866V72.165L29.038 59.604L29.996 60.628Z"
-                        fill="#A3A3A3" />
-                </g>
-                <defs>
-                    <clipPath id="clip0_24_108">
-                        <rect width="30" height="75" fill="white" />
-                    </clipPath>
-                </defs>
-            </svg>
-
-            <p>Ready to <br>get started</p>
-        </div>
-        <div class="txt">
-            <p>get started<br>Ready to</p>
-            <svg width="30" height="75" viewBox="0 0 30 75" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g clip-path="url(#clip0_24_108)">
-                    <path fill-rule="evenodd" clip-rule="evenodd"
-                        d="M29.996 60.628L15.866 74.102V75.007H14.633V74.543L14.597 74.505L14.11 74.968L0.0169678 59.977L1.02497 59.019L14.557 73.413L14.633 73.341V0.0159912H15.866V72.165L29.038 59.604L29.996 60.628Z"
-                        fill="#A3A3A3" />
-                </g>
-                <defs>
-                    <clipPath id="clip0_24_108">
-                        <rect width="30" height="75" fill="white" />
-                    </clipPath>
-                </defs>
-            </svg>
-        </div>
-
         <div class="content">
-            <div class="vid">
-                <video controls id="myVideo" preload="metadata">
-                    <source src="https://storage.luxant-service.fr/s/gcPX8MRN3G8oD8p/download" type="video/mp4">
-                </video>
+
+
+            <div class="txt">
+                <svg width="30" height="75" viewBox="0 0 30 75" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_24_108)">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M29.996 60.628L15.866 74.102V75.007H14.633V74.543L14.597 74.505L14.11 74.968L0.0169678 59.977L1.02497 59.019L14.557 73.413L14.633 73.341V0.0159912H15.866V72.165L29.038 59.604L29.996 60.628Z"
+                            fill="#A3A3A3" />
+                    </g>
+                    <defs>
+                        <clipPath id="clip0_24_108">
+                            <rect width="30" height="75" fill="white" />
+                        </clipPath>
+                    </defs>
+                </svg>
+
+                <p>Ready to <br>get started</p>
+            </div>
+            <div class="txt">
+                <p>get started<br>Ready to</p>
+                <svg width="30" height="75" viewBox="0 0 30 75" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_24_108)">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M29.996 60.628L15.866 74.102V75.007H14.633V74.543L14.597 74.505L14.11 74.968L0.0169678 59.977L1.02497 59.019L14.557 73.413L14.633 73.341V0.0159912H15.866V72.165L29.038 59.604L29.996 60.628Z"
+                            fill="#A3A3A3" />
+                    </g>
+                    <defs>
+                        <clipPath id="clip0_24_108">
+                            <rect width="30" height="75" fill="white" />
+                        </clipPath>
+                    </defs>
+                </svg>
+            </div>
+
+            <div class="container">
+                <div class="vid">
+                    <video controls id="myVideo" preload="metadata">
+                        <source src="https://storage.luxant-service.fr/s/gcPX8MRN3G8oD8p/download" type="video/mp4">
+                    </video>
+                </div>
             </div>
         </div>
     </section>
@@ -317,9 +360,9 @@
     <footer>
         <div class="content">
             <div class="left">
-                <video autoplay muted loop id="myVideo">
-                    <source src="./assets/vid/illust.webm" type="video/webm">
-                </video>
+                <div>
+                    <img src="./assets/img/mila_custom.png" alt="">
+                </div>
             </div>
             <div class="right">
                 <div class="news">
@@ -336,7 +379,8 @@
                 </div>
                 <input type="email" class="form-control" name="mail" id="mail" placeholder="Mail" required>
                 <button type="submit" class="custom-submit">Confirmer<i class="fas fa-envelope"></i></button>
-                <p>Suivez-nous<a href="#"> <i class="fab fa-facebook-square"></i></a> <a href="#"> <i class="fab fa-instagram"></i></a><a href="#"> <i class="fab fa-twitter"></i></a></p>
+                <p>Suivez-nous<a href="#"><i class="fab fa-facebook-square"></i></a><a href="#"><i
+                            class="fab fa-instagram"></i></a><a href="#"><i class="fab fa-linkedin"></i></a></p>
             </div>
         </div>
         <div class="credit">
@@ -354,25 +398,24 @@
         });
     </script>
 
-    
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script>
-    //Menu burger
-    $(document).ready(function () {
-        $('.burger').click(function () {
-            $(this).toggleClass('burger-open');
-            $('.menu').toggleClass('is-open');
-            return false;
-        });
-        $('.menu ul li a').click(function (event) {
-            $('.menu').toggleClass('is-open');
-            $('.burger').toggleClass('burger-open');
-            event.stopPropagation();
-        });
-    });
 
-</script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+        //Menu burger
+        $(document).ready(function () {
+            $('.burger').click(function () {
+                $(this).toggleClass('burger-open');
+                $('.menu').toggleClass('is-open');
+                return false;
+            });
+            $('.menu ul li a').click(function (event) {
+                $('.menu').toggleClass('is-open');
+                $('.burger').toggleClass('burger-open');
+                event.stopPropagation();
+            });
+        });
+    </script>
 </body>
 
 </html>
