--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -11,20 +11,6 @@
 
 <body>
     <header id="home">
-        <!-- <div class="nav">
-            <div class="navbar">
-                <div class="logo"><a href="#home"><img src="./assets/img/logo_luxantinnovation.svg" alt=""></a></div>
-                <div class="menu">
-                    <ul>
-                        <li><a href="#">Marchés</a></li>
-                        <li><a href="#">Fonctionnalitées</a></li>
-                        <li><a href="#">Personnalisations</a></li>
-                        <li><a href="#"><img src="./assets/icons/icon _switch.svg" alt=""></a></li>
-                    </ul>
-                </div>
-            </div>
-        </div> -->
-
         <div class="nav">
             <div class="burger">
                 <span></span>
@@ -42,6 +28,7 @@
                 </ul>
             </div>
         </div>
+
         <div class="main">
             <div class="left">
                 <div class="topline">
@@ -107,17 +94,17 @@
                     <a href="#target">
                         <svg width="30" height="75" viewBox="0 0 30 75" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g clip-path="url(#clip0_24_108)">
-                            <path fill-rule="evenodd" clip-rule="evenodd" d="M29.996 60.628L15.866 74.102V75.007H14.633V74.543L14.597 74.505L14.11 74.968L0.0169678 59.977L1.02497 59.019L14.557 73.413L14.633 73.341V0.0159912H15.866V72.165L29.038 59.604L29.996 60.628Z" fill="#A3A3A3"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M29.996 60.628L15.866 74.102V75.007H14.633V74.543L14.597 74.505L14.11 74.968L0.0169678 59.977L1.02497 59.019L14.557 73.413L14.633 73.341V0.0159912H15.866V72.165L29.038 59.604L29.996 60.628Z"
+                                    fill="#A3A3A3" />
                             </g>
                             <defs>
-                            <clipPath id="clip0_24_108">
-                            <rect width="30" height="75" fill="white"/>
-                            </clipPath>
+                                <clipPath id="clip0_24_108">
+                                    <rect width="30" height="75" fill="white" />
+                                </clipPath>
                             </defs>
-                            </svg>
+                        </svg>
                     </a>
-
-                        
                 </div>
                 <div>
                     <p>holographique</p>
@@ -127,6 +114,7 @@
 
 
     </section>
+
     <section class="target" id="target">
         <div class="topline">
             <div class="gauche">
@@ -145,7 +133,7 @@
             </div>
         </div>
 
-        <div class="cards">
+        <!-- <div class="cards">
             <article>
                 <div class="titre">
                     <p>Transport</p>
@@ -214,7 +202,127 @@
                     <p>Mila sera votre alliée pour enrichir la communication avec vos clients et les fidéliser</p>
                 </div>
             </article>
+        </div> -->
+
+<div class="content">
+    <div class="container">
+        <div class="card">
+            <div class="slide slide1">
+                <div class="content">
+                    <div class="titre">
+                        <p>Transport</p>
+                    </div>
+
+                    <div class="icon">
+                        <!-- <i class="fa fa-user-circle" aria-hidden="true"></i> -->
+                    </div>
+                </div>
+            </div>
+            <div class="slide slide2">
+                <div class="content">
+                    <p>- Mila améliore l’accueil des passagers et optimise leur expérience de voyage</p>
+                    <p>- Elle fournit en temps réel, toutes les informations liées à leur trajet, correspondance, retard éventuel, offres promotionnelles des boutiques et restaurants partenaires</p>
+                    <p>- Mila sera votre aout incontournable pour renforcer la relation avec vos clients !</p>
+                </div>
+            </div>
         </div>
+
+        <div class="card">
+            <div class="slide slide1">
+                <div class="content">
+                    <div class="titre">
+                        <p>Hôtels & Casinos</p>
+                    </div>
+
+                    <div class="icon">
+                        <!-- <i class="fa fa-user-circle" aria-hidden="true"></i> -->
+                    </div>
+                </div>
+            </div>
+            <div class="slide slide2">
+                <div class="content">
+                    <p>- Mila réinvente l'expérience de séjour dans les hôtels et casinos</p>
+                    <p>- Elle guide les clients, répond à leurs questions, recommande les meilleures attractions, met en
+                        avant les événements spéciaux, et bien plus encore !</p>
+                    <p>- Avec Mila, innovez dans l'accueil des visiteurs et offrez une expérience captivante, unique et
+                        mémorable !</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="slide slide1">
+                <div class="content">
+                    <div class="titre">
+                        <p>Musées</p>
+                    </div>
+
+                    <div class="icon">
+                        <!-- <i class="fa fa-user-circle" aria-hidden="true"></i> -->
+                    </div>
+                </div>
+            </div>
+            <div class="slide slide2">
+                <div class="content">
+                    <p>- Mila enrichit l'expérience de visite dans les musées</p>
+                    <p>- Elle guide les visiteurs, répond à leurs questions, présente les œuvres d'art, met en avant les
+                        expositions et événements, et bien plus encore !</p>
+                    <p>- Avec Mila, innovez dans l'accueil des visiteurs et proposez une expérience captivante, unique et
+                        mémorable !</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="slide slide1">
+                <div class="content">
+                    <div class="titre">
+                        <p>Galeries Marchandes</p>
+                    </div>
+
+                    <div class="icon">
+                        <!-- <i class="fa fa-user-circle" aria-hidden="true"></i> -->
+                    </div>
+                </div>
+            </div>
+            <div class="slide slide2">
+                <div class="content">
+                    <p>- Mila transforme l'expérience de visite dans vos centres commerciaux</p>
+                    <p>- Elle offre une assistance continue pour orienter les clients, répondre à leurs questions, leurs
+                        proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
+                    <p>- Mila sera votre partenaire idéale pour améliorer la communication avec vos clients et renforcer
+                        leur fidélité</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="slide slide1">
+                <div class="content">
+                    <div class="titre">
+                        <p>Points de vente</p>
+                    </div>
+
+                    <div class="icon">
+                        <!-- <i class="fa fa-user-circle" aria-hidden="true"></i> -->
+                    </div>
+                </div>
+            </div>
+            <div class="slide slide2">
+                <div class="content">
+                    <p>- Mila révolutionne l'expérience d’achat dans vos points de vente</p>
+                    <p>- Elle offre une assistance continue pour orienter les clients, répondre à leurs questions, leurs
+                        proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
+                    <p>- Mila sera votre alliée pour enrichir la communication avec vos clients et les fidéliser</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+</div>
+
+
     </section>
 
     <section class="fonctions">
