--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -115,7 +115,7 @@
 
     </section>
 
-    <section class="target" id="target">
+    <section class="target" id="marchés">
         <div class="topline">
             <div class="gauche">
                 <div>
@@ -325,7 +325,7 @@
 
     </section>
 
-    <section class="fonctions">
+    <section class="fonctions" id="fonctionnalités">
         <div class="content">
             <div class="left">
                 <div class="title">
@@ -356,7 +356,7 @@
         </div>
     </section>
 
-    <section class="custom">
+    <section class="custom" id="personnalisations">
         <div class="content">
             <div class="gauche">
                 <div><img src="./assets/img/mila_custom.png" alt=""></div>
@@ -387,8 +387,6 @@
 
     <section class="video">
         <div class="content">
-
-
             <div class="txt">
                 <svg width="30" height="75" viewBox="0 0 30 75" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_24_108)">
@@ -431,7 +429,7 @@
         </div>
     </section>
 
-    <section class="demo">
+    <section class="demo" id="contact">
         <div class="content">
             <div class="left">
                 <div><img src="./assets/img/mila_demo.png" alt="">
